# Paper-Agent

./: .gitignore  Paper-Agent-Dev-Design .md  README.md  main.py  paper-agent.md  pyproject.toml
src/agents/: analyse_agent.py  analysis_agent.py  orchestrator.py  reading_agent.py  report_agent.py  search_agent.py  writing_agent.py
src/agents/sub_analyse_agent/: cluster_agent.py  deep_analyse_agent.py  global_analyse_agent.py
src/agents/sub_analysis_agent/: cluster_agent.py  deep_analyse_agent.py  global_analyse_agent.py
src/agents/sub_writing_agent/: retrieval_agent.py  writing_agent.py  writing_director_agent.py  writing_state_models.py
src/core/: config.py  model_client.py  models.yaml  prompts.py  state_models.py
src/services/: arxiv_client.py  arxiv_fetcher.py  chroma_client.py  retrieval_tool.py  semanticscholar_search.py
src/tasks/: deduplicator.py  paper_downloader.py  paper_filter.py  paper_search.py
test/: test_analyseAgent.py  test_any.py  test_chatGroup.py  test_searchAgent.py  test_workflow.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue
